WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316336
[WebGPU] shader,validation,expression,binary,bitwise_shift:* is failing
https://bugs.webkit.org/show_bug.cgi?id=316336
Summary
[WebGPU] shader,validation,expression,binary,bitwise_shift:* is failing
Tadeu Zagallo
Reported
2026-06-04 13:27:35 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-04 13:27:44 PDT
<
rdar://problem/178754576
>
Tadeu Zagallo
Comment 2
2026-06-04 13:37:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66480
EWS
Comment 3
2026-06-07 13:07:48 PDT
Committed
314717@main
(ed1cf383755c): <
https://commits.webkit.org/314717@main
> Reviewed commits have been landed. Closing PR #66480 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug