[WebGPU] shader,validation,expression,binary,bitwise_shift:* is failing https://bugs.webkit.org/show_bug.cgi?id=316336 rdar://178754576

Reviewed by Mike Wyrzykowski.

Add a validation function to check if the shift amount exceeds the bit width
when it's an override value.

* LayoutTests/http/tests/webgpu/webgpu/shader/validation/expression/binary/bitwise_shift-expected.txt:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):
(WGSL::shiftAmountExceedsBitWidth):
(WGSL::VALIDATION_FUNCTION):
* Source/WebGPU/WGSL/TypeDeclarations.rb:

Canonical link: https://commits.webkit.org/314717@main